--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <canvas id="gameCanvas"></canvas>
     <div id="scoreDisplay"></div>
+    <div id="gameOverScreen" style="display: none;">
+        <h1>Game Over!</h1>
+        <button onclick="restartGame()">Play Again</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
